[gd_scene load_steps=7 format=3 uid="uid://cxv8kj5h2ydmw"]

[ext_resource type="Script" path="res://scripts/ui/save_slot_ui.gd" id="1_0dmwp"]
[ext_resource type="FontFile" path="res://assets/fonts/WenQuanYi_Bitmap_Song_12px.ttf" id="2_font_bold"]
[ext_resource type="FontFile" path="res://assets/fonts/WenQuanYi_Bitmap_Song_12px.ttf" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slot"]
bg_color = Color(0.1, 0.14, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.25, 0.42, 0.65, 0.8)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0.15, 0.22, 0.32, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.28, 0.48, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.2, 0.3, 0.42, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.38, 0.58, 0.82, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SaveSlot" type="PanelContainer"]
custom_minimum_size = Vector2(300, 400)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")
script = ExtResource("1_0dmwp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SlotIcon" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "üíæ"

[node name="SlotLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font_bold")
theme_override_font_sizes/font_size = 56
text = "Â≠òÊ°£ÊßΩ‰Ωç 1"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(0.25, 0.45, 0.7, 0.5)
layout_mode = 2

[node name="Info" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SaveTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
text = "üïê ‰øùÂ≠òÊó∂Èó¥:"
autowrap_mode = 2

[node name="SaveTimeValue" type="Label" parent="MarginContainer/VBoxContainer/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 44
text = "2024-01-01 12:00"
autowrap_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.85, 0.6, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
text = "üó∫Ô∏è ÂÖ≥Âç°: 1"

[node name="CoinsLabel" type="Label" parent="MarginContainer/VBoxContainer/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
text = "ü™ô ÈáëÂ∏Å: 0"

[node name="PlayTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.75, 0.9, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
text = "‚è±Ô∏è Ê∏∏ÊàèÊó∂Èïø: 0ÂàÜÈíü"

[node name="EmptyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
text = "üì≠ Á©∫Â≠òÊ°£ÊßΩ‰Ωç"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.95, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "‚ñ∂ ËØªÂèñÂ≠òÊ°£"

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons/ButtonRow"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95, 0.7, 0.7, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "üóë Âà†Èô§"

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons/ButtonRow"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)
theme_override_colors/font_hover_color = Color(0.85, 0.95, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "üÜï Êñ∞Ê∏∏Êàè"
